[gd_scene load_steps=19 format=2]

[ext_resource path="res://calculator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Bromine.otf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Gameplay.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/coolvetica rg.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://textures/hori_progress.png" type="Texture" id=6]
[ext_resource path="res://textures/hori_under.png" type="Texture" id=7]
[ext_resource path="res://textures/hori_over.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 56
extra_spacing_char = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_top = 10
extra_spacing_char = 5
extra_spacing_space = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/loading4.png-2be4f49f203ccd0ea0f265df70286fbd.stex"

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="calculator" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 152.0

[node name="calcButton" type="Button" parent="."]
margin_left = 896.622
margin_top = 529.516
margin_right = 1010.62
margin_bottom = 586.516
custom_fonts/font = SubResource( 1 )
text = "Calculator"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="calcTimer" type="Timer" parent="."]

[node name="taskTimer" type="Timer" parent="."]

[node name="feedbackTimer" type="Timer" parent="."]

[node name="questionTimer" type="Timer" parent="."]

[node name="easterEggTimer" type="Timer" parent="."]

[node name="equalTimer" type="Timer" parent="."]

[node name="timeLeft" type="Label" parent="."]
margin_left = 560.0
margin_top = 9.05612
margin_right = 875.0
margin_bottom = 66.0561
custom_fonts/font = SubResource( 2 )
text = "Time Left:"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="timeLeft"]
margin_left = 321.975
margin_top = 2.72848e-12
margin_right = 424.975
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "300"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreLabel" type="Label" parent="."]
margin_left = 656.0
margin_top = 62.898
margin_right = 874.0
margin_bottom = 119.898
custom_fonts/font = SubResource( 2 )
text = "Score:"
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="scoreLabel"]
margin_left = 224.873
margin_top = 3.8147e-06
margin_right = 305.873
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="problem" type="Label" parent="."]
margin_left = 312.0
margin_top = 200.0
margin_right = 717.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 4 )
text = "9+10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer" type="LineEdit" parent="problem"]
anchor_left = 0.304
anchor_top = 2.212
anchor_right = 0.304
anchor_bottom = 2.212
margin_left = -89.066
margin_top = -64.628
margin_right = 244.934
margin_bottom = 14.372
custom_fonts/font = SubResource( 5 )
text = "21"
align = 1

[node name="submit" type="Button" parent="problem"]
anchor_left = 0.304
anchor_top = 2.359
anchor_right = 0.304
anchor_bottom = 2.359
margin_left = -89.066
margin_top = 13.229
margin_right = 244.934
margin_bottom = 58.229
custom_fonts/font = SubResource( 6 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questionTimeProg" type="TextureProgress" parent="problem"]
visible = false
margin_left = 34.0
margin_top = 64.0
margin_right = 368.0
margin_bottom = 88.0
step = 0.001
value = 100.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feedback" type="RichTextLabel" parent="."]
margin_left = 688.0
margin_top = 304.0
margin_right = 742.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( -454.085, 101.557 )
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 1, 0, 1 )
bbcode_enabled = true
bbcode_text = "+1"
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="easterEgg" type="RichTextLabel" parent="."]
visible = false
margin_left = 552.0
margin_top = 320.0
margin_right = 616.0
margin_bottom = 344.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0.894118, 0.74902, 0.0470588, 1 )
text = "Nice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wheel" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 152, 72 )
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 10 )

[node name="socketButton" type="Button" parent="."]
margin_left = 432.0
margin_top = 504.0
margin_right = 488.0
margin_bottom = 536.0
text = "Socket"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dictButton" type="Button" parent="."]
margin_left = 496.0
margin_top = 504.0
margin_right = 571.0
margin_bottom = 536.0
text = "Show Dict"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 717.0
margin_top = 132.0
margin_right = 1012.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="show_answer" from="." to="calculator" method="_on_Main_show_answer"]
[connection signal="button_pressed" from="calculator" to="." method="_on_calculator_button_pressed"]
[connection signal="equals_pressed" from="calculator" to="." method="_on_calculator_equals_pressed"]
[connection signal="pressed" from="calcButton" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="calcTimer" to="." method="_on_calcTimer_timeout"]
[connection signal="timeout" from="taskTimer" to="." method="_on_taskTimer_timeout"]
[connection signal="timeout" from="feedbackTimer" to="." method="_on_feedbackTimer_timeout"]
[connection signal="timeout" from="questionTimer" to="." method="_on_questionTimer_timeout"]
[connection signal="timeout" from="easterEggTimer" to="." method="_on_easterEggTimer_timeout"]
[connection signal="timeout" from="equalTimer" to="." method="_on_equalTimer_timeout"]
[connection signal="pressed" from="problem/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="socketButton" to="." method="_on_socketButton_pressed"]
[connection signal="pressed" from="dictButton" to="." method="_on_dictButton_pressed"]
